--- a/BrainfinityAPI/Views/Shared/_LoginPartial.cshtml
+++ b/BrainfinityAPI/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<Korisnik> SignInManager
+@inject UserManager<Korisnik> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
